--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,3 +5,7 @@
 @import "base/foundation-settings";
 @import "foundation";
 @include foundation-everything;
+
+
+//components
+@import "components/appmenu";
