--- a/src/styles/components/_appmenu.scss
+++ b/src/styles/components/_appmenu.scss
@@ -1,13 +1,14 @@
 .appmenu {
   background: $yellow;
+  display: block
 }
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
   width: 36px;
   height: 30px;
-  left: 36px;
-  top: 36px;
+  left: 10px;
+  top: 10px;
 }
 
 /* Color/shape of burger icon bars */
