work on navbar and burger button styling

--- a/src/styles/components/_appmenu.scss
+++ b/src/styles/components/_appmenu.scss
@@ -13,7 +13,8 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #373a47;
+  background: #fff;
+  border-radius: .2rem;
 }
 
 /* Position and sizing of clickable cross button */
