--- a/src/styles/components/_activecategories.scss
+++ b/src/styles/components/_activecategories.scss
@@ -1,5 +1,5 @@
 .button-bar {
-  height: 4rem;
+  height: 10vh;
   background: $lightgrey;
   padding-left: 1rem;
   padding-right: 1rem;
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 .cat-button {
   height: 2rem;
