--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -20,3 +20,4 @@
 @import "components/appmenu";
 @import "components/activecategories";
 @import "components/activitylist";
+@import "components/activityitem";
