--- a/src/styles/components/_activityitem.scss
+++ b/src/styles/components/_activityitem.scss
@@ -7,5 +7,7 @@
   font-weight: bold;
 }
 .activity-image {
-  min-width: 100%;
+  min-width: 100vw;
+  min-height: 30vh;
+  background-color: $black;
 }
