work on activity item adjust ment forsize

--- a/src/styles/components/_activityitem.scss
+++ b/src/styles/components/_activityitem.scss
@@ -11,3 +11,12 @@
   min-height: 30vh;
   background-color: $black;
 }
+.chat-button {
+  background: $lightgrey;
+}
+.sting-col {
+  background: $yellow;
+}
+.chat-col {
+  background: $lightgrey;
+}
