add styling and login functions for auth

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -21,3 +21,4 @@
 @import "components/activecategories";
 @import "components/activitylist";
 @import "components/activityitem";
+@import "components/loginscreen";
