add function prototypes for activity submissiion

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -25,5 +25,5 @@ body{
 @import "components/activecategories";
 @import "components/activitylist";
 @import "components/activityitem";
-@import "components/categoryscreen"
+@import "components/categoryscreen";
 @import "components/loginscreen";
