--- a/src/styles/components/_categoryscreen.scss
+++ b/src/styles/components/_categoryscreen.scss
@@ -1,7 +1,14 @@
-
-
+.main-container {
+  background-color: $grey;
+  flex: 1;
+  min-height: 100vh;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .honeycomb {
--webkit-transform:  translate(40%, 20%); 
+-webkit-transform:  translate(40%, 20%);
 transform: translate(40%, 20%);
 }
