preloading splash screen and redirects

--- a/src/styles/components/_categoryscreen.scss
+++ b/src/styles/components/_categoryscreen.scss
@@ -18,4 +18,10 @@ transform: translate(40%, 20%);
 
 .continue {
   margin-top: .7rem;
+  color: #fce600
+}
+
+.continue-button {
+  background-color: #fce600;
+  color: #404241;
 }
