starting tag categories

--- a/src/styles/components/_categoryscreen.scss
+++ b/src/styles/components/_categoryscreen.scss
@@ -17,11 +17,15 @@ transform: translate(40%, 20%);
 }
 
 .continue {
-  margin-top: .7rem;
+  margin-top: 4rem;
   color: #fce600
 }
 
 .continue-button {
   background-color: #fce600;
   color: #404241;
+}
+
+.category-label {
+  color: white;
 }
