styling and button redirects

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -28,4 +28,5 @@
 @import "components/activityitem";
 @import "components/categoryscreen";
 @import "components/loginscreen";
-@import "components/modal"
+@import "components/modal";
+@import "components/datepicker";
