--- a/src/styles/components/_activityitem.scss
+++ b/src/styles/components/_activityitem.scss
@@ -20,3 +20,13 @@
 .chat-col {
   background: $lightgrey;
 }
+
+.grey-row{
+  background: #b2b0af;
+  text-align: center;
+}
+
+.yellow-button {
+  background: #fce600;
+  color: black;
+}
