--- a/src/styles/components/_appmenu.scss
+++ b/src/styles/components/_appmenu.scss
@@ -50,3 +50,13 @@
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+
+.bar-logo {
+  top: -8px;
+  right: 1em;
+  position: fixed;
+}
+
+.white-menu {
+  color: white !important;
+}
