--- a/src/styles/components/_activityitem.scss
+++ b/src/styles/components/_activityitem.scss
@@ -1,3 +1,19 @@
+.activity-time {
+  font-weight: bold;
+  font-size: 1rem;
+  letter-spacing: .2rem;
+  padding-top: 0
+}
+.activity-title {
+  letter-spacing: .2rem;
+  font-size: .9rem;
+  padding-top: 0
+}
+.locale-title {
+  letter-spacing: .2rem;
+  font-size: .9rem;
+  padding-top: 0
+}
 .activity-item {
   margin-top: .5rem;
 }
