--- a/src/styles/components/_activityitem.scss
+++ b/src/styles/components/_activityitem.scss
@@ -24,7 +24,7 @@
 }
 .activity-image {
   min-width: 100vw;
-  min-height: 30vh;
+  max-height: 30vh;
   background-color: $black;
 }
 .chat-button {
